Fix alignment for toolbar elements

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header {
   height: 45px;
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between;
   font-size: 21px;
 }
@@ -33,7 +34,7 @@ header {
   display: flex;
   align-items: center;
   font-size: 21px;
-  margin-right: 42px;
+  margin-right: 24px;
 
   /* Primary/B300 */
 
